--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
         <!-- card -->
         <section>
             <h1
-                class="text-blue text-center letter-spacing text-uppercase my-5 fw-bold font1 animate__animated animate__flip animate__infinite infinite animate__slower	4s">
+                class="text-blue text-center letter-spacing text-uppercase my-5 fw-bold font1 animate__animated animate__flip animate__infinite infinite animate__slower 4s">
                 Our Process</h1>
             <div class="card-group">
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <img src="img/collecting.png" class="card-img-top" alt="milk Collection" />
                     <div class="card-body">
                         <h5 class="card-title">1. Milk Collection from Local Farms</h5>
@@ -255,7 +255,7 @@
                         <small class="text-muted">Your Trusted Source for Quality Milk Jeevan Dairy</small>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <img src="img/money.png" class="card-img-top" alt="well paid farmers" />
                     <div class="card-body">
                         <h5 class="card-title">2. Fair Compensation for Farmers</h5>
@@ -267,7 +267,7 @@
                         <small class="text-muted">Your Trusted Source for Quality Milk Jeevan Dairy</small>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <img src="img/quality.png" class="card-img-top" alt="Milk quality test" />
                     <div class="card-body">
                         <h5 class="card-title">3. Quality Control</h5>
@@ -312,7 +312,7 @@
                 </div> -->
                 <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4 col-12 py-3">
-                        <div class="card text-center box border border-light shadow-0">
+                        <div class="card text-center box border border-light shadow-0" >
                             <div class="card-body">
                                 <img src="img/handshake.png" alt="handshake" class="img-fluid icon my-3">
                                 <h4 class="card-title text-blue">Our Mission</h4>
