--- a/contact.html
+++ b/contact.html
@@ -35,16 +35,16 @@
             <div class="collapse  navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto fs-5 ">
                     <li class="nav-item">
-                        <a class="nav-link  text-white fw-bold" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link text-white fw-bold" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-white fw-bold" href="about.html">About</a>
+                        <a class="nav-link text-white fw-bold" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="#">Services</a>
+                        <a class="nav-link text-white fw-bold" href="Services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="#">Business Opportunities</a>
+                        <a class="nav-link text-white fw-bold" href="business.html">business opportunities</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active text-white fw-bold" href="contact.html">Contact us</a>
