--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                         <a class="nav-link text-white fw-bold" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="#">Services</a>
+                        <a class="nav-link text-white fw-bold" href="Services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="#">business opportunities</a>
+                        <a class="nav-link text-white fw-bold" href="business.html">business opportunities</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white fw-bold" href="contact.html">Contact us</a>
