--- a/about.html
+++ b/about.html
@@ -17,6 +17,12 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.min.css" rel="stylesheet" />
     <!-- Animation on scrolling -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Licorice&family=Noto+Sans:ital@1&family=Playfair+Display&display=swap"
+        rel="stylesheet">
 
     <!-- Css file -->
     <link rel="stylesheet" href="style.css">
@@ -124,7 +130,7 @@
     <br>
     <!-- Divider -->
 
-    <!-- Footer -->
+     <!-- Footer -->
     <section>
         <footer class="text-center text-lg-start bg-blue text-muted text-white">
             <!-- Section: Social media -->
@@ -138,20 +144,20 @@
                 <!-- Right -->
                 <div>
                     <!-- Facebook -->
-                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons"
+                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons fs-6"
                         style="background-color: #3b5998;" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
 
                     <!-- Google -->
-                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons"
+                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons fs-6"
                         style="background-color: #dd4b39;" href="#!" role="button"><i class="fab fa-google"></i></a>
 
                     <!-- Instagram -->
-                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons"
+                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons fs-5"
                         style="background-color: #ac2bac;" href="#!" role="button"><i class="fab fa-instagram"></i></a>
                     <!-- Whatsapp -->
-                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons"
+                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons fs-5"
                         style="background-color: #28D146;"
-                        href="https://api.whatsapp.com/send?phone=917566640419&text=Got%20your%20reference%20from%20your%20website%20.%20I%20want%20to%20know%20more%20about%20your%20services" target=”_blank”
+                        href="https://api.whatsapp.com/send?phone=917566640419&text=Got%20your%20reference%20from%20your%20website%20.%20I%20want%20to%20know%20more%20about%20your%20services"
                         role="button"><i class="fab fa-whatsapp"></i></a>
                 </div>
                 <!-- Right -->
@@ -166,7 +172,7 @@
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                             <!-- Content -->
-                            <h6 class="text-uppercase fw-bold mb-4">
+                            <h6 class="text-uppercase fw-bold mb-4 logo">
                                 <i class="fas fa-feather me-3"></i>Jeevan-Dairy
                             </h6>
                             <p>
@@ -177,7 +183,7 @@
                         <!-- Grid column -->
                         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                             <!-- Links -->
-                            <h6 class="text-uppercase fw-bold mb-4">
+                            <h6 class="text-uppercase fw-bold mb-4 logo">
                                 Our Products
                             </h6>
                             <p>
@@ -198,7 +204,7 @@
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                             <!-- Links -->
-                            <h6 class="text-uppercase fw-bold mb-4">
+                            <h6 class="text-uppercase fw-bold mb-4 logo">
                                 External Links
                             </h6>
                             <p>
@@ -219,10 +225,10 @@
                         <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                             <!-- Links -->
-                            <h6 class="text-uppercase fw-bold mb-4">Contact info</h6>
+                            <h6 class="text-uppercase fw-bold mb-4 logo">Contact info</h6>
                             <p><i class="fas fa-home me-3"></i>
-                                Near Railway Crossing Pal Colony Gwalior road
-                                Garautha oad Birare Gurasarai Jhansi - 284202</p>
+                                Near Railway Crossing Pal Colony Gwalior road
+                                Garautha oad Birare Gurasarai Jhansi - 284202</p>
                             <p>
                                 <i class="fas fa-envelope me-3"></i>
                                 Jeevandairy@gmail.com
