--- a/business.html
+++ b/business.html
@@ -1,11 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>business-Opportunities</title>
-</head>
-<body>
-    business
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Font Awesome -->
+        <meta name="description"
+            content="Discover the excellence of Jeevan Dairy in Jhansi (284202). Our business model revolves around collecting quality milk directly from farmers, ensuring the best rates for our agricultural partners. Explore our range of premium dairy products today.">
+        <meta name="keywords"
+            content="Jeevan Dairy, Dairy Products, Quality Milk from Uttar Pradesh Farmers, Dairy Farming in Uttar Pradesh, dairy farm near me, Farmer-Centric Dairy Mode, Milk Collection from Farmers, Agribusiness, Sustainable Farming, Dairy Industry, Milk Collection Point in Uttar Pradesh, Dairy Farm near Jhansi Fort, Jeevan Dairy Uttar Pradesh, Best Rates for Farmers in Uttar Pradesh, Local Dairy in Uttar Pradesh, Fresh Cow Milk Uttar Pradesh, ">
+        <meta name="author" content="Jeevan Dairy">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+        <!-- MDB -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.min.css" rel="stylesheet" />
+        <!-- Animation on scrolling -->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <!-- font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Licorice&family=Noto+Sans:ital@1&family=Playfair+Display&display=swap"
+            rel="stylesheet">
+
+        <!-- Css file -->
+        <link rel="stylesheet" href="style.css">
+        <title>About</title>
+
+    </head>
+
+    <body>
+        <!-- NAV -->
+        <nav data-mdb-navbar-init
+            class="navbar navbar-expand-lg my-md-4 mx-md-3 navbar-dark fixed-top p-md-3 shadow-6-strong">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white fs-4 fw-bolder" href="index.html">Jeevan Dairy</a>
+                <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse  navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto fs-5 ">
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link  text-white fw-bold" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold" href="Services.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold active" href="business.html">business opportunities</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold" href="contact.html">Contact us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!--END NAV -->
+
+        <!-- Bg image -->
+        <SECtion>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/crousel22.jpg" class="d-block w-100"
+                        alt="Indian cow eating fresh grass at Jeevan Dairy" />
+                </div>
+        </SECtion>
+        <!--END Bg image -->
+
+       
+
+
+        <!-- Divider -->
+        <br>
+        <hr class="hr hr-blurry" />
+        <br>
+        <!-- Divider -->
+
+        <!-- Footer -->
+        <section>
+            <footer class="text-center text-lg-start bg-blue text-muted text-white">
+                <!-- Section: Social media -->
+                <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom text-white">
+                    <!-- Left -->
+                    <div class="me-5 d-none d-lg-block ">
+                        <span>Get Connected with us on Social Networks:</span>
+                    </div>
+                    <!-- Left -->
+
+                    <!-- Right -->
+                    <div>
+                        <!-- Facebook -->
+                        <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons fs-6"
+                            style="background-color: #3b5998;" href="#!" role="button"><i
+                                class="fab fa-facebook-f"></i></a>
+
+                        <!-- Google -->
+                        <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons fs-6"
+                            style="background-color: #dd4b39;" href="#!" role="button"><i class="fab fa-google"></i></a>
+
+                        <!-- Instagram -->
+                        <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons fs-5"
+                            style="background-color: #ac2bac;" href="#!" role="button"><i
+                                class="fab fa-instagram"></i></a>
+                        <!-- Whatsapp -->
+                        <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons fs-5"
+                            style="background-color: #28D146;"
+                            href="https://api.whatsapp.com/send?phone=917566640419&text=Got%20your%20reference%20from%20your%20website%20.%20I%20want%20to%20know%20more%20about%20your%20services"
+                            role="button"><i class="fab fa-whatsapp"></i></a>
+                    </div>
+                    <!-- Right -->
+                </section>
+                <!-- Section: Social media -->
+
+                <!-- Section: Links  -->
+                <section class="text-white">
+                    <div class="container text-center text-md-start mt-5">
+                        <!-- Grid row -->
+                        <div class="row mt-3">
+                            <!-- Grid column -->
+                            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                                <!-- Content -->
+                                <h6 class="text-uppercase fw-bold mb-4 logo">
+                                    <i class="fas fa-feather me-3"></i>Jeevan-Dairy
+                                </h6>
+                                <p>
+                                    Your Trusted Source for Quality Milk Jeevan Dairy
+                                </p>
+                            </div>
+
+                            <!-- Grid column -->
+                            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                                <!-- Links -->
+                                <h6 class="text-uppercase fw-bold mb-4 logo">
+                                    Our Products
+                                </h6>
+                                <p>
+                                    <a href="#!" class="text-reset">• 1 Milk</a>
+                                </p>
+                                <p>
+                                    <a href="#!" class="text-reset">• 2 cheese</a>
+                                </p>
+                                <p>
+                                    <a href="#!" class="text-reset">• 3 Pure Ghee</a>
+                                </p>
+                                <p>
+                                    <a href="#!" class="text-reset">• 4 Curd</a>
+                                </p>
+                            </div>
+                            <!-- Grid column -->
+
+                            <!-- Grid column -->
+                            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                                <!-- Links -->
+                                <h6 class="text-uppercase fw-bold mb-4 logo">
+                                    External Links
+                                </h6>
+                                <p>
+                                    <a href="https://api.whatsapp.com/send?phone=917566640419&text=Got%20your%20reference%20from%20your%20Website%20.%20I%20want%20to%20be part of%20your%20Dairy%20Business%20services"
+                                        target=”_blank” class="text-reset">Join us</a>
+                                </p>
+                                <p>
+                                    <a href="https://api.whatsapp.com/send?phone=917566640419&text=Got%20your%20reference%20from%20your%20website%20.%20I%20want%20to%20know%20more%20about%20your%20services"
+                                        target=”_blank” class="text-reset">Services</a>
+                                </p>
+                                <p>
+                                    <a href="https://api.whatsapp.com/send?phone=917566640419&text=%20Hello sir,%20I%20Need%20your%20Help%20in%20Dairy%20Business%20"
+                                        target=”_blank” class="text-reset">Help</a>
+                                </p>
+                            </div>
+                            <!-- Grid column -->
+
+                            <!-- Grid column -->
+                            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                                <!-- Links -->
+                                <h6 class="text-uppercase fw-bold mb-4 logo">Contact info</h6>
+                                <p><i class="fas fa-home me-3"></i>
+                                    Near Railway Crossing Pal Colony Gwalior road
+                                    Garautha oad Birare Gurasarai Jhansi - 284202</p>
+                                <p>
+                                    <i class="fas fa-envelope me-3"></i>
+                                    Jeevandairy@gmail.com
+                                </p>
+                                <p><i class="fas fa-phone me-3"></i> + 91 787 921 7201</p>
+                                <p><i class="fas fa-message me-3"></i> + 91 756 664 0419</p>
+                            </div>
+                            <!-- Grid column -->
+                        </div>
+                        <!-- Grid row -->
+                    </div>
+                </section>
+                <!-- Section: Links  -->
+
+                <!-- Copyright -->
+                <div class="text-center text-white p-4" style="background-color: rgba(1, 9, 14, 0.233);">
+                    © 2021 Copyright:
+                    <a class="text-reset fw-bold" href="">Jeevan-Dairy</a>
+                </div>
+                <!-- Copyright -->
+            </footer>
+        </section>
+        <!-- Footer -->
+        <!-- Animation on scrolling -->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+        AOS.init();
+        </script>
+
+        <!-- MDB -->
+        <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.umd.min.js"></script>
+    </body>
+
 </html>
