--- a/contact.html
+++ b/contact.html
@@ -1,76 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Font Awesome -->
-    <meta name="description"
-        content="Discover the excellence of Jeevan Dairy in Jhansi (284202). Our business model revolves around collecting quality milk directly from farmers, ensuring the best rates for our agricultural partners. Explore our range of premium dairy products today.">
-    <meta name="keywords"
-        content="Jeevan Dairy, Dairy Products, Quality Milk from Uttar Pradesh Farmers, Dairy Farming in Uttar Pradesh, dairy farm near me, Farmer-Centric Dairy Mode, Milk Collection from Farmers, Agribusiness, Sustainable Farming, Dairy Industry, Milk Collection Point in Uttar Pradesh, Dairy Farm near Jhansi Fort, Jeevan Dairy Uttar Pradesh, Best Rates for Farmers in Uttar Pradesh, Local Dairy in Uttar Pradesh, Fresh Cow Milk Uttar Pradesh, ">
-    <meta name="author" content="Jeevan Dairy">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <!-- MDB -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.min.css" rel="stylesheet" />
-    <!-- Animation on scrolling -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Font Awesome -->
+        <meta name="description"
+            content="Discover the excellence of Jeevan Dairy in Jhansi (284202). Our business model revolves around collecting quality milk directly from farmers, ensuring the best rates for our agricultural partners. Explore our range of premium dairy products today.">
+        <meta name="keywords"
+            content="Jeevan Dairy, Dairy Products, Quality Milk from Uttar Pradesh Farmers, Dairy Farming in Uttar Pradesh, dairy farm near me, Farmer-Centric Dairy Mode, Milk Collection from Farmers, Agribusiness, Sustainable Farming, Dairy Industry, Milk Collection Point in Uttar Pradesh, Dairy Farm near Jhansi Fort, Jeevan Dairy Uttar Pradesh, Best Rates for Farmers in Uttar Pradesh, Local Dairy in Uttar Pradesh, Fresh Cow Milk Uttar Pradesh, ">
+        <meta name="author" content="Jeevan Dairy">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+        <!-- MDB -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.min.css" rel="stylesheet" />
+        <!-- Animation on scrolling -->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <!-- Css file -->
-    <link rel="stylesheet" href="style.css">
-    <title>Contact us</title>
+        <!-- Css file -->
+        <link rel="stylesheet" href="style.css">
+        <title>Contact us</title>
 
-<body>
-    <!-- NAV -->
-    <nav data-mdb-navbar-init
-        class="navbar navbar-expand-lg my-md-4 mx-md-3 navbar-dark fixed-top p-md-3 shadow-6-strong">
-        <div class="container-fluid">
-            <a class="navbar-brand text-white fs-4 fw-bolder" href="index.html">Jeevan Dairy</a>
-            <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse  navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto fs-5 ">
-                    <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="Services.html">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="business.html">business opportunities</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active text-white fw-bold" href="contact.html">Contact us</a>
-                    </li>
-                </ul>
+    <body>
+        <!-- NAV -->
+        <nav data-mdb-navbar-init
+            class="navbar navbar-expand-lg my-md-4 mx-md-3 navbar-dark fixed-top p-md-3 shadow-6-strong">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white fs-4 fw-bolder" href="index.html">Jeevan Dairy</a>
+                <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse  navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto fs-5 ">
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold" href="Services.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold" href="business.html">business opportunities</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-white fw-bold" href="contact.html">Contact us</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-    <!--END NAV -->
+        </nav>
+        <!--END NAV -->
 
-    <!-- Bg image -->
-    <SECtion>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/crousel22.jpg" class="d-block w-100"
-                    alt="Indian cow eating fresh grass at Jeevan Dairy" />
+        <!-- Bg image -->
+        <SECtion>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/crousel22.jpg" class="d-block w-100"
+                        alt="Indian cow eating fresh grass at Jeevan Dairy" />
+                </div>
+        </SECtion>
+        <!--END Bg image -->
+        <!-- Divider -->
+        <br>
+        <hr class="hr hr-blurry" />
+        <br>
+        <!-- Divider -->
+
+        <!-- contact us -->
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-6">
+                <form>
+                    <!-- 2 column grid layout with text inputs for the first and last names -->
+                    <div class="row mb-4">
+                        <div class="col">
+                            <div data-mdb-input-init class="form-outline mb-4">
+                                <input type="text" id="form4Example1" class="form-control" />
+                                <label class="form-label" for="form4Example1">Name</label>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Phone number -->
+                    <div class="row mb-4">
+                        <div class="col">
+                            <div data-mdb-input-init class="form-outline mb-4">
+                                <input type="number" id="form4Example1" class="form-control" />
+                                <label class="form-label" for="form4Example1">Phone Number</label>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- Email input -->
+                    <div data-mdb-input-init class="form-outline mb-4">
+                        <input type="email" id="form4Example2" class="form-control" />
+                        <label class="form-label" for="form4Example2">Email address</label>
+                    </div>
+
+                    <!-- Message input -->
+                    <div data-mdb-input-init class="form-outline mb-4">
+                        <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+                        <label class="form-label" for="form4Example3">Message</label>
+                    </div>
+
+                    <!-- Checkbox -->
+                    <div class="form-check d-flex justify-content-center mb-4">
+                        <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" checked />
+                        <label class="form-check-label" for="form4Example4">
+                            Send me a copy of this message
+                        </label>
+                    </div>
+
+                    <!-- Submit button -->
+                    <button type="submit" class="btn btn-primary btn-block mb-4">
+                        Sign up
+                    </button>
             </div>
-    </SECtion>
-    <!--END Bg image -->
-    <!-- Divider -->
-    <br>
-    <hr class="hr hr-blurry" />
-    <br>
-    <!-- Divider -->
-
-    <!-- contact us -->
 
 
 
@@ -86,16 +134,15 @@
 
 
 
-    
-    <!--End Contact us -->
+            <!--End Contact us -->
 
-    <!-- Divider -->
-    <hr class="hr hr-blurry" />
-    <!-- Divider -->
-    
-    <!-- MDB -->
-    <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.umd.min.js"></script>
-</body>
+            <!-- Divider -->
+            <hr class="hr hr-blurry" />
+            <!-- Divider -->
+
+            <!-- MDB -->
+            <script type="text/javascript"
+                src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.umd.min.js"></script>
+    </body>
 
 </html>
