--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
     <section class="container-fluid ">
         <h3
-            class="text-blue text-center letter-spacing text-uppercase fw-bold font1 my-5 py-5  bg-blue text-white p-2 ">
+            class="text-blue text-center letter-spacing text-uppercase fw-bold font1 my-5 py-5  bg-blue text-white p-2 logo">
             By choosing Jeevan Dairy, you're not just choosing a brand; you're choosing a commitment to quality,
             sustainability, and the prosperity of our localfarming communities. Join us on this journey towards a
             healthier, happier, and more connected community through the goodness of pure, farm-fresh milk.</h3>
@@ -378,18 +378,18 @@
                 <!-- Right -->
                 <div>
                     <!-- Facebook -->
-                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons"
+                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons fs-6"
                         style="background-color: #3b5998;" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
 
                     <!-- Google -->
-                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons"
+                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons fs-6"
                         style="background-color: #dd4b39;" href="#!" role="button"><i class="fab fa-google"></i></a>
 
                     <!-- Instagram -->
-                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons"
+                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons fs-5"
                         style="background-color: #ac2bac;" href="#!" role="button"><i class="fab fa-instagram"></i></a>
                     <!-- Whatsapp -->
-                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons"
+                    <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons fs-5"
                         style="background-color: #28D146;"
                         href="https://api.whatsapp.com/send?phone=917566640419&text=Got%20your%20reference%20from%20your%20website%20.%20I%20want%20to%20know%20more%20about%20your%20services"
                         role="button"><i class="fab fa-whatsapp"></i></a>
@@ -406,7 +406,7 @@
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                             <!-- Content -->
-                            <h6 class="text-uppercase fw-bold mb-4">
+                            <h6 class="text-uppercase fw-bold mb-4 logo">
                                 <i class="fas fa-feather me-3"></i>Jeevan-Dairy
                             </h6>
                             <p>
@@ -417,7 +417,7 @@
                         <!-- Grid column -->
                         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                             <!-- Links -->
-                            <h6 class="text-uppercase fw-bold mb-4">
+                            <h6 class="text-uppercase fw-bold mb-4 logo">
                                 Our Products
                             </h6>
                             <p>
@@ -438,7 +438,7 @@
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                             <!-- Links -->
-                            <h6 class="text-uppercase fw-bold mb-4">
+                            <h6 class="text-uppercase fw-bold mb-4 logo">
                                 External Links
                             </h6>
                             <p>
@@ -459,7 +459,7 @@
                         <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                             <!-- Links -->
-                            <h6 class="text-uppercase fw-bold mb-4">Contact info</h6>
+                            <h6 class="text-uppercase fw-bold mb-4 logo">Contact info</h6>
                             <p><i class="fas fa-home me-3"></i>
                                 Near Railway Crossing Pal Colony Gwalior road
                                 Garautha oad Birare Gurasarai Jhansi - 284202</p>
