add contact us page

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <nav data-mdb-navbar-init
         class="navbar navbar-expand-lg my-md-4 mx-md-3 navbar-dark fixed-top p-md-3 shadow-6-strong">
         <div class="container-fluid">
-            <a class="navbar-brand text-white fs-4 fw-bolder" href="index.html">Jeevan Dairy</a>
+            <a class="navbar-brand text-white fs-4 fw-bolder logo" href="index.html">Jeevan Dairy</a>
             <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
