fix form inputs and clean code

--- a/business.html
+++ b/business.html
@@ -52,7 +52,8 @@
                             <a class="nav-link text-white fw-bold" href="Services.html">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white fw-bold active" href="business.html">business opportunities</a>
+                            <a class="nav-link text-white fw-bold active" href="business.html">business
+                                opportunities</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white fw-bold" href="contact.html">Contact us</a>
@@ -73,7 +74,7 @@
         </SECtion>
         <!--END Bg image -->
 
-       
+
 
 
         <!-- Divider -->
@@ -209,7 +210,7 @@
         <!-- Animation on scrolling -->
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>
-        AOS.init();
+            AOS.init();
         </script>
 
         <!-- MDB -->
