--- a/business.html
+++ b/business.html
@@ -186,7 +186,7 @@
                                     Garautha oad Birare Gurasarai Jhansi - 284202</p>
                                 <p>
                                     <i class="fas fa-envelope me-3"></i>
-                                    Jeevandairy@gmail.com
+                                    jeevandairyindia@gmail.com
                                 </p>
                                 <p><i class="fas fa-phone me-3"></i> + 91 787 921 7201</p>
                                 <p><i class="fas fa-message me-3"></i> + 91 756 664 0419</p>
