--- a/contact.html
+++ b/contact.html
@@ -79,25 +79,21 @@
                                     <i class="fa-sharp fa-solid fa-phone fs-3 text-darkblue"></i>
 
                                     <a href="tel:+7999836406"
-                                        class="fs-4 my-2 text-decoration-none text-black ps-2">9009971361,
-                                        7999836406</a>
+                                        class="fs-4 my-2 text-decoration-none text-black ps-2">7879217201,
+                                        7566640419</a>
                                 </div>
 
                                 <div class="pt-4">
                                     <i class="fa-solid fa-envelope fs-3 text-darkblue"></i>
 
                                     <a href="mailto:abhasolarsolutions@gmail.com"
-                                        class="fs-4 my-2 text-decoration-none text-black ps-2">abhasolarsolutions@gmail.com</a>
+                                        class="fs-4 my-2 text-decoration-none text-black ps-2">jeevandairyindia@gmail.com</a>
                                 </div>
                                 <div class="pt-4">
                                     <i class="fa-solid fa-building fs-3 text-darkblue"></i>
 
                                     <a href="https://goo.gl/maps/BXdV8y5hfKYcWMbY6"
-                                        class="fs-4 my-2 text-decoration-none text-black ps-2">BDA Colony, A-467,
-                                        Shahpura,
-                                        Bhopal Madhya
-                                        Pradesh -
-                                        462039</a>
+                                        class="fs-4 my-2 text-decoration-none text-black ps-2">address</a>
                                 </div>
                             </div>
                         </div>
@@ -153,7 +149,7 @@
                                             <label for="exampleFormControlTextarea1" class="form-label ">
                                                 Tell us what you need help with
                                             </label>
-                                            <textarea class="form-control  shadow-none " id="inputMessage" rows="3"
+                                            <textarea class="form-control  shadow-none " id="inputMessage" rows="4"
                                                 required minlength="50"></textarea>
                                         </div>
                                     </div>
@@ -275,7 +271,7 @@
                                     Garautha oad Birare Gurasarai Jhansi - 284202</p>
                                 <p>
                                     <i class="fas fa-envelope me-3"></i>
-                                    Jeevandairy@gmail.com
+                                    jeevandairyindia@gmail.com
                                 </p>
                                 <p><i class="fas fa-phone me-3"></i> + 91 787 921 7201</p>
                                 <p><i class="fas fa-message me-3"></i> + 91 756 664 0419</p>
