push karo kush raho

--- a/contact.html
+++ b/contact.html
@@ -105,66 +105,28 @@
             </div>
         </div>
     </div>
-
-
     <!--End Section -->
 
+    <!-- Divider -->
+    <hr class="hr hr-blurry" />
+    <!-- Divider -->
 
-    <!-- Contact Us -->
 
-    <section class="py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12 col-12 d-flex justify-content-center">
-                    <img src="img/logo futter.jpg" alt="" class="img-fluid h-75 ">
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 col-12 px-lg-5">
-                    <h1 class="text-blue text-center">Contact Us</h1>
-                    <form id="myForm">
-                        <div class="container d-flex justify-content-center" style="width: fit-content;">
-                            <div class="row  py-2 ">
-                                <div class="row py-2">
-                                    <div>
-                                        <label for="inputName" class="form-label ">Name</label>
-                                        <input type="text" class="form-control shadow-none " id="inputName"
-                                            aria-required="true" required>
-                                    </div>
-                                </div>
-                                <div class="row py-2">
-                                    <div>
-                                        <label for="inputEmail" class="form-label  ">Email</label>
-                                        <input type="email" class="form-control shadow-none " id="inputEmail"
-                                            aria-required="true" required>
-                                    </div>
-                                </div>
-                                <div class="row py-2">
-                                    <div>
-                                        <label for="inputPhone" class="form-label  ">Phone number</label>
-                                        <input type="text" class="form-control shadow-none " id="inputPhone"
-                                            aria-required="true" required minlength="10">
-                                    </div>
-                                </div>
-                                <div class="row py-2">
-                                    <div class="mb-3">
-                                        <label for="exampleFormControlTextarea1" class="form-label ">
-                                            Tell us what you need help with
-                                        </label>
-                                        <textarea class="form-control  shadow-none " id="inputMessage" rows="4" required
-                                            minlength="50"></textarea>
-                                    </div>
-                                </div>
-                                <div class="d-grid gap-2 col-6 ms-auto me-auto pt-4 pb-5 ">
-                                    <button type="button"
-                                        class="btn rounded-pill shadow bg-blue text-white ls-wider">SEND</button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
+    <section>
+        <div class="text-center">
+            <h1 class="text-uppercase text-blue fw-bold mb-3 letter-spacing font1">
+                About Us
+            </h1>
         </div>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13398.492684932993!2d74.74539974999999!3d32.90813005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391e631b8f3c1b33%3A0xcd34549f2421aeae!2sK.V%20No.1%20Akhnoor!5e0!3m2!1sen!2sin!4v1701447578804!5m2!1sen!2sin"
+            width="1200" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+
     </section>
-    <!--End Contact us -->
+
+
     <!-- Footer -->
     <section>
         <footer class="text-center text-lg-start bg-blue text-muted text-white">
