--- a/business.html
+++ b/business.html
@@ -86,12 +86,12 @@
     <div class="accordion accordion-borderless" id="accordionFlushExampleX">
         <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOneX">
-                <button data-mdb-collapse-init class="accordion-button" type="button" data-mdb-toggle="collapse"
+                <button data-mdb-collapse-init class="fs-2 text-blue accordion-button" type="button" data-mdb-toggle="collapse"
                     data-mdb-target="#flush-collapseOneX" aria-expanded="true" aria-controls="flush-collapseOneX">
                     Join as a Supplier
                 </button>
             </h2>
-            <div id="flush-collapseOneX" class="accordion-collapse collapse show" aria-labelledby="flush-headingOneX"
+            <div id="flush-collapseOneX" class="fs-4 accordion-collapse collapse show" aria-labelledby="flush-headingOneX"
                 data-mdb-parent="#accordionFlushExampleX">
                 <div class="accordion-body">
                     Placeholder content for this accordion, which is intended to demonstrate the
@@ -101,13 +101,13 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingTwoX">
-                <button data-mdb-collapse-init class="accordion-button collapsed" type="button"
+                <button data-mdb-collapse-init class="fs-2 text-blue accordion-button collapsed" type="button"
                     data-mdb-toggle="collapse" data-mdb-target="#flush-collapseTwoX" aria-expanded="false"
                     aria-controls="flush-collapseTwoX">
                     Join as a Vender
                 </button>
             </h2>
-            <div id="flush-collapseTwoX" class="accordion-collapse collapse" aria-labelledby="flush-headingTwoX"
+            <div id="flush-collapseTwoX" class="fs-4 accordion-collapse collapse" aria-labelledby="flush-headingTwoX"
                 data-mdb-parent="#accordionFlushExampleX">
                 <div class="accordion-body">
                     Placeholder content for this accordion, which is intended to demonstrate the
@@ -118,13 +118,13 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingThreeX">
-                <button data-mdb-collapse-init class="accordion-button collapsed" type="button"
+                <button data-mdb-collapse-init class="fs-2 text-blue accordion-button collapsed" type="button"
                     data-mdb-toggle="collapse" data-mdb-target="#flush-collapseThreeX" aria-expanded="false"
                     aria-controls="flush-collapseThreeX">
                     Tenders
                 </button>
             </h2>
-            <div id="flush-collapseThreeX" class="accordion-collapse collapse" aria-labelledby="flush-headingThreeX"
+            <div id="flush-collapseThreeX" class="fs-4 accordion-collapse collapse" aria-labelledby="flush-headingThreeX"
                 data-mdb-parent="#accordionFlushExampleX">
                 <div class="accordion-body">
                     Placeholder content for this accordion, which is intended to demonstrate the
