fix map, footer and accordian layout

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a class="nav-link text-white fw-bold" href="Services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="business.html">business opportunities</a>
+                        <a class="nav-link text-white fw-bold" href="business.html">Business Opportunities</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white fw-bold" href="contact.html">Contact us</a>
@@ -124,7 +124,7 @@
 
                             <h3>Your Trusted Source for Quality Milk!</h3>
 
-                            <p>
+                            <p class="para">
                                 At Jeevan Dairy, we take pride in our commitment to delivering the freshest and
                                 highest
                                 quality milk straight from the heart of Uttar Pradesh. Our business model revolves
@@ -171,7 +171,7 @@
                         class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 text-white">
 
                         <h3 class=" text-uppercase fw-bold font3">• Quality Assurance </h3>
-                        <p class="my-md-3 text-capitalize">We believe in quality over quantity. Our stringent
+                        <p class="my-md-3 text-capitalize para">We believe in quality over quantity. Our stringent
                             quality
                             control measures guarantee that every drop of milk that reaches your doorstep is pure,
                             fresh,
@@ -188,7 +188,7 @@
                     <div
                         class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 order-md-2 text-white">
                         <h3 class="text-uppercase fw-bold font3">• Farmers First</h3>
-                        <p class="my-md-3 text-capitalize">Our unique business model focuses on empowering local
+                        <p class="my-md-3 text-capitalize para">Our unique business model focuses on empowering local
                             farmers. We
                             work closely with them, providing fair and competitive rates for their produce. By
                             choosing
@@ -206,7 +206,7 @@
                     <div
                         class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 text-white ">
                         <h3 class=" text-uppercase fw-bold font3">• Community-Centric Approach</h3>
-                        <p class="my-md-3 text-capitalize">Jeevan Dairy is more than just a dairy brand; we are an
+                        <p class="my-md-3 text-capitalize para">Jeevan Dairy is more than just a dairy brand; we are an
                             integral
                             part of the communities we serve. Our commitment to community welfare extends beyond
                             providing
@@ -241,33 +241,33 @@
                 <img src="img/collecting.png" class="card-img-top" alt="milk Collection" />
                 <div class="card-body">
                     <h5 class="card-title">1. Milk Collection from Local Farms</h5>
-                    <p class="card-text">
+                    <p class="card-text para">
                         We source our milk directly from local farms, ensuring the freshness and quality that define
                         Jeevan
                         Dairy.
                     </p>
                 </div>
                 <div class="card-footer">
-                    <small class="text-muted">Your Trusted Source for Quality Milk Jeevan Dairy</small>
+                    <small class="text-muted para">Your Trusted Source for Quality Milk Jeevan Dairy</small>
                 </div>
             </div>
             <div class="card" data-aos="zoom-in">
                 <img src="img/money.png" class="card-img-top" alt="well paid farmers" />
                 <div class="card-body">
                     <h5 class="card-title">2. Fair Compensation for Farmers</h5>
-                    <p class="card-text">Our commitment to fair trade means that farmers receive the best rates for
+                    <p class="card-text para">Our commitment to fair trade means that farmers receive the best rates for
                         their
                         milk, fostering a sustainable and mutually beneficial partnership.</p>
                 </div>
                 <div class="card-footer">
-                    <small class="text-muted">Your Trusted Source for Quality Milk Jeevan Dairy</small>
+                    <small class="text-muted para">Your Trusted Source for Quality Milk Jeevan Dairy</small>
                 </div>
             </div>
             <div class="card" data-aos="zoom-in">
                 <img src="img/quality.png" class="card-img-top" alt="Milk quality test" />
                 <div class="card-body">
                     <h5 class="card-title">3. Quality Control</h5>
-                    <p class="card-text">
+                    <p class="card-text para">
                         Rigorous quality checks at every stage of the process ensure that only the finest milk
                         reaches
                         your
@@ -275,7 +275,7 @@
                     </p>
                 </div>
                 <div class="card-footer">
-                    <small class="text-muted">Your Trusted Source for Quality Milk Jeevan Dairy</small>
+                    <small class="text-muted para">Your Trusted Source for Quality Milk Jeevan Dairy</small>
                 </div>
             </div>
         </div>
@@ -304,7 +304,7 @@
                         <div class="card-body">
                             <img src="img/handshake.png" alt="handshake" class="img-fluid icon my-3">
                             <h4 class="card-title text-blue">Our Mission</h4>
-                            <p class="card-text text-secondary me-auto ms-auto lh-lg">Jeevan Dairy Producer Company
+                            <p class="card-text text-secondary me-auto ms-auto lh-lg para">Jeevan Dairy Producer Company
                                 shall collect quality milk from all its members at competitive price and by
                                 providing
                                 technical input services to reduce milk production cost
@@ -321,7 +321,7 @@
                         <div class="card-body">
                             <img src="img/company-vision.png" alt="Values" class="img-fluid icon my-3">
                             <h4 class="card-title text-blue">Our Vision</h4>
-                            <p class="card-text text-secondary me-auto ms-auto lh-lg">Our vision is to create a
+                            <p class="card-text text-secondary me-auto ms-auto lh-lg para">Our vision is to create a
                                 seamless dairy ecosystem, bridging the gap between farmers and dairy giants. By
                                 efficiently
                                 collecting premium-quality milk from local farmers, we aim to be the trusted link in
@@ -337,7 +337,7 @@
                         <div class="card-body">
                             <img src="img/leadership.png" alt="leadership" class="img-fluid icon my-3">
                             <h4 class="card-title text-blue">Our Values</h4>
-                            <p class="card-text text-secondary me-auto ms-auto lh-lg ">Our values revolve around
+                            <p class="card-text text-secondary me-auto ms-auto lh-lg para">Our values revolve around
                                 integrity, fostering farmer prosperity, and ensuring dairy excellence. We prioritize
                                 ethical
                                 sourcing, fair compensation for farmers, and maintaining the highest quality
@@ -408,16 +408,16 @@
                                 Our Products
                             </h6>
                             <p>
-                                <a href="#!" class="text-reset">• 1 Milk</a>
+                                <a href="#!" class="text-reset">• Milk</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">• 2 cheese</a>
+                                <a href="#!" class="text-reset">•  cheese</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">• 3 Pure Ghee</a>
+                                <a href="#!" class="text-reset">•  Pure Ghee</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">• 4 Curd</a>
+                                <a href="#!" class="text-reset">•  Curd</a>
                             </p>
                         </div>
                         <!-- Grid column -->
