--- a/Services.html
+++ b/Services.html
@@ -52,7 +52,7 @@
                             <a class="nav-link text-white fw-bold active" href="Services.html">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white fw-bold" href="business.html">business opportunities</a>
+                            <a class="nav-link text-white fw-bold" href="business.html"> Business Opportunities</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white fw-bold" href="contact.html">Contact us</a>
@@ -144,16 +144,16 @@
                                     Our Products
                                 </h6>
                                 <p>
-                                    <a href="#!" class="text-reset">• 1 Milk</a>
+                                    <a href="#!" class="text-reset">• Milk</a>
                                 </p>
                                 <p>
-                                    <a href="#!" class="text-reset">• 2 cheese</a>
+                                    <a href="#!" class="text-reset">• cheese</a>
                                 </p>
                                 <p>
-                                    <a href="#!" class="text-reset">• 3 Pure Ghee</a>
+                                    <a href="#!" class="text-reset">• Pure Ghee</a>
                                 </p>
                                 <p>
-                                    <a href="#!" class="text-reset">• 4 Curd</a>
+                                    <a href="#!" class="text-reset">• Curd</a>
                                 </p>
                             </div>
                             <!-- Grid column -->
