--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                         <a class="nav-link text-white fw-bold" href="Services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="business.html">business opportunities</a>
+                        <a class="nav-link text-white fw-bold" href="business.html">Business Opportunities</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white fw-bold" href="contact.html">Contact us</a>
@@ -65,13 +65,13 @@
     <!--END NAV -->
 
     <!-- Bg image -->
-    <SECtion>
+    <section>
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="img/crousel22.jpg" class="d-block w-100"
                     alt="Indian cow eating fresh grass at Jeevan Dairy" />
             </div>
-    </SECtion>
+    </section>
     <!--END Bg image -->
 
     <!-- About content -->
@@ -93,7 +93,7 @@
                                 <span class="text-darkblue font3"> Your Trusted Source for Quality Milk! </span>
                             </h2>
 
-                            <p>
+                            <p class="para">
                                 At <B>Jeevan-Dairy</B> , we take pride in our commitment to delivering the
                                 <I>freshest
                                     and highest</I> quality milk straight from the heart of <U>Uttar Pradesh</U>.
@@ -104,7 +104,7 @@
                                 community.
                             </p>
 
-                            <p>
+                            <p class="para">
                                 The heart of our business is a unique and sustainable model that sets us apart. We
                                 believe in the strength of our local farming communities and their ability to
                                 produce
@@ -186,16 +186,16 @@
                                 Our Products
                             </h6>
                             <p>
-                                <a href="#!" class="text-reset">• 1 Milk</a>
+                                <a href="#!" class="text-reset">• Milk</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">• 2 cheese</a>
+                                <a href="#!" class="text-reset">• cheese</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">• 3 Pure Ghee</a>
+                                <a href="#!" class="text-reset">• Pure Ghee</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">• 4 Curd</a>
+                                <a href="#!" class="text-reset">• Curd</a>
                             </p>
                         </div>
                         <!-- Grid column -->
