--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
         <section class="mb-4">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/crousel22.jpg" class="d-block w-100"
+                    <img src="img/contactus.jpg" class="d-block w-100"
                         alt="Indian cow eating fresh grass at Jeevan Dairy" />
                 </div>
         </section>
