--- a/Services.html
+++ b/Services.html
@@ -26,7 +26,7 @@
 
         <!-- Css file -->
         <link rel="stylesheet" href="style.css">
-        <title>About</title>
+        <title>Services</title>
 
     </head>
 
