--- a/business.html
+++ b/business.html
@@ -67,7 +67,7 @@
     <section>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/crousel22.jpg" class="d-block w-100"
+                <img src="img/bopps.jpg" class="d-block w-100"
                     alt="Indian cow eating fresh grass at Jeevan Dairy" />
             </div>
     </section>
