--- a/business.html
+++ b/business.html
@@ -67,8 +67,7 @@
     <section>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/bopps.jpg" class="d-block w-100"
-                    alt="Indian cow eating fresh grass at Jeevan Dairy" />
+                <img src="img/bopps.jpg" class="d-block w-100" alt="Indian cow eating fresh grass at Jeevan Dairy" />
             </div>
     </section>
     <!--END Bg image -->
@@ -165,7 +164,7 @@
         </div>
     </div>
 
-    <!-- </main> -->/
+    <!-- </main> -->
 
     <!-- Divider -->
     <br>
