--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <img src="img/milksplash.png" class="w-100" alt="milk splash">
             </div>
             <h1
-                class="text-white text-center pt-3 animate__animated animate__flip animate__infinite infinite animate__slower	4s letter-spacing text-uppercase fw-bold font1">
+                class="text-white text-center pt-3 letter-spacing text-uppercase fw-bold font1">
                 Why
                 Jeevan Dairy?
             </h1>
@@ -234,7 +234,7 @@
     <!-- card -->
     <section>
         <h1
-            class="text-blue text-center letter-spacing text-uppercase my-5 fw-bold font1 animate__animated animate__flip animate__infinite infinite animate__slower 4s">
+            class="text-blue text-center letter-spacing text-uppercase my-5 fw-bold font1">
             Our Process</h1>
         <div class="card-group">
             <div class="card" data-aos="zoom-in">
