--- a/Services.html
+++ b/Services.html
@@ -67,7 +67,7 @@
         <SECtion>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/crousel22.jpg" class="d-block w-100"
+                    <img src="img/services.jpg" class="d-block w-100"
                         alt="Indian cow eating fresh grass at Jeevan Dairy" />
                 </div>
         </SECtion>
